DS-1644: Add some further logging to JobExecutor's checkCancellations process
Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>